test/staging/pre_commit_log.txt
(bsrc-etl-venv) PS C:\Users\B25712\bsrc-etl-venv\bsrc-etl> pre-commit run --all-files
ruff lint................................................................Failed
- hook id: ruff
- exit code: 1

src\staging\extract_base.py:384:9: ANN003 Missing type annotation for `**kwargs`
    |
382 |         file_name: str,
383 |         stg_table_name: str,
384 |         **kwargs,  # Accept additional keyword arguments for backward compatibility
    |         ^^^^^^^^ ANN003
385 |     ) -> bool:
386 |         """Validate data quality for the staging table.
    |

Found 1 error.
All checks passed!
All checks passed!
All checks passed!

ruff format..............................................................Passed
mypy.....................................................................Failed
- hook id: mypy
- exit code: 1

Success: no issues found in 13 source files
src\staging\extract_base.py:359: error: Cannot instantiate type "Type[type[DialStepStatus]]"  [misc]
src\staging\extract_base.py:359: error: Cannot instantiate type "Type[type[NonSSFStepStatus]]"  [misc]
src\staging\extract_base.py:359: error: Cannot instantiate type "Type[type[SSFStepStatus]]"  [misc]
src\staging\extract_base.py:369: error: Cannot instantiate type "Type[type[DialStepStatus]]"  [misc]
src\staging\extract_base.py:369: error: Cannot instantiate type "Type[type[NonSSFStepStatus]]"  [misc]
src\staging\extract_base.py:369: error: Cannot instantiate type "Type[type[SSFStepStatus]]"  [misc]
src\staging\extract_base.py:417: error: Cannot instantiate type "Type[type[DialStepStatus]]"  [misc]
src\staging\extract_base.py:417: error: Cannot instantiate type "Type[type[NonSSFStepStatus]]"  [misc]
src\staging\extract_base.py:417: error: Cannot instantiate type "Type[type[SSFStepStatus]]"  [misc]
src\staging\extract_base.py:427: error: Cannot instantiate type "Type[type[DialStepStatus]]"  [misc]
src\staging\extract_base.py:427: error: Cannot instantiate type "Type[type[NonSSFStepStatus]]"  [misc]
src\staging\extract_base.py:427: error: Cannot instantiate type "Type[type[SSFStepStatus]]"  [misc]
Found 12 errors in 1 file (checked 13 source files)
src\staging\extract_base.py:359: error: Cannot instantiate type "Type[type[DialStepStatus]]"  [misc]
src\staging\extract_base.py:359: error: Cannot instantiate type "Type[type[NonSSFStepStatus]]"  [misc]
src\staging\extract_base.py:359: error: Cannot instantiate type "Type[type[SSFStepStatus]]"  [misc]
src\staging\extract_base.py:369: error: Cannot instantiate type "Type[type[DialStepStatus]]"  [misc]
src\staging\extract_base.py:369: error: Cannot instantiate type "Type[type[NonSSFStepStatus]]"  [misc]
src\staging\extract_base.py:369: error: Cannot instantiate type "Type[type[SSFStepStatus]]"  [misc]
src\staging\extract_base.py:417: error: Cannot instantiate type "Type[type[DialStepStatus]]"  [misc]
src\staging\extract_base.py:417: error: Cannot instantiate type "Type[type[NonSSFStepStatus]]"  [misc]
src\staging\extract_base.py:417: error: Cannot instantiate type "Type[type[SSFStepStatus]]"  [misc]
src\staging\extract_base.py:427: error: Cannot instantiate type "Type[type[DialStepStatus]]"  [misc]
src\staging\extract_base.py:427: error: Cannot instantiate type "Type[type[NonSSFStepStatus]]"  [misc]
src\staging\extract_base.py:427: error: Cannot instantiate type "Type[type[SSFStepStatus]]"  [misc]
Found 12 errors in 1 file (checked 13 source files)
src\staging\extract_base.py:359: error: Cannot instantiate type "Type[type[DialStepStatus]]"  [misc]
src\staging\extract_base.py:359: error: Cannot instantiate type "Type[type[NonSSFStepStatus]]"  [misc]
src\staging\extract_base.py:359: error: Cannot instantiate type "Type[type[SSFStepStatus]]"  [misc]
src\staging\extract_base.py:369: error: Cannot instantiate type "Type[type[DialStepStatus]]"  [misc]
src\staging\extract_base.py:369: error: Cannot instantiate type "Type[type[NonSSFStepStatus]]"  [misc]
src\staging\extract_base.py:369: error: Cannot instantiate type "Type[type[SSFStepStatus]]"  [misc]
src\staging\extract_base.py:417: error: Cannot instantiate type "Type[type[DialStepStatus]]"  [misc]
src\staging\extract_base.py:417: error: Cannot instantiate type "Type[type[NonSSFStepStatus]]"  [misc]
src\staging\extract_base.py:417: error: Cannot instantiate type "Type[type[SSFStepStatus]]"  [misc]
src\staging\extract_base.py:427: error: Cannot instantiate type "Type[type[DialStepStatus]]"  [misc]
src\staging\extract_base.py:427: error: Cannot instantiate type "Type[type[NonSSFStepStatus]]"  [misc]
src\staging\extract_base.py:427: error: Cannot instantiate type "Type[type[SSFStepStatus]]"  [misc]
Found 12 errors in 1 file (checked 13 source files)
